<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/round_image"
        tools:src="@tools:sample/avatars"
        android:layout_margin="10dp"
        app:riv_corner_radius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/title"
        app:layout_constraintStart_toEndOf="@id/round_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_image"
        android:fontFamily="@font/poppins_bold"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        android:text="@string/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@id/round_image"
        app:layout_constraintBottom_toBottomOf="@id/round_image"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/date"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/poster_image"
        app:layout_constraintTop_toBottomOf="@id/round_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:riv_corner_radius="20dp"
        android:layout_margin="10dp"
        android:src="@mipmap/bird_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_original_title"
        app:layout_constraintTop_toBottomOf="@id/poster_image"
        android:text="@string/original_title"
        android:fontFamily="@font/poppins_bold"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_overview"
        app:layout_constraintTop_toBottomOf="@id/tv_original_title"
        app:layout_constraintStart_toStartOf="@id/tv_original_title"
        app:layout_constraintEnd_toEndOf="@id/tv_original_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/lorem"
        android:textSize="11sp"
        android:fontFamily="@font/poppins_light"
        android:maxLines="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>