<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/date"
        android:background="@drawable/bg_shimmer"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:transitionName="dateTransition"
        app:layout_constraintBottom_toBottomOf="@id/round_image"
        app:layout_constraintStart_toEndOf="@id/round_image"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/tv_original_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="12sp"
        android:background="@drawable/bg_shimmer"
        android:transitionName="originalTitleTransition"
        app:layout_constraintTop_toBottomOf="@id/poster_image" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:maxLines="2"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/lorem"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp"
        android:transitionName="overviewTransition"
        android:background="@drawable/bg_shimmer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_original_title"
        app:layout_constraintStart_toStartOf="@id/tv_original_title"
        app:layout_constraintTop_toBottomOf="@id/tv_original_title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="14sp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_shimmer"
        android:layout_marginBottom="5dp"
        android:transitionName="titleTransition"
        app:layout_constraintBottom_toTopOf="@id/tv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/round_image"
        app:layout_constraintTop_toTopOf="@id/round_image" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/poster_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_poster"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_shimmer"
        android:transitionName="imageTransition"
        app:layout_constraintBottom_toTopOf="@+id/tv_original_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_image"
        app:riv_corner_radius="20dp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/round_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_shimmer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>